알고리즘 및 ES 공부